# bidirectional-typing

./: README.md  bidirectional-typing.cabal
app/: Main.hs  Options.hs
src/Core/: Expression.hs  Parser.hs  PrettyPrint.hs  TypeChecker.hs
src/Core/Parser/: Lexer.x
